# OpenVML

./: .gitignore  .travis.yml  32_64_bit.c  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README.md  appveyor.yml  cmake_install.cmake  openvml_export.h
cmake/: arch_detect.c  auto_detect_cpu.cmake  cpuid_arm.c  cpuid_x86.c  detect_32or64bit.cmake
config/: arm.cmake
driver/: CMakeLists.txt  Makefile  cmake_install.cmake  openvml_server.c  openvml_util.c
include/: openvml.h  openvml_common.h  openvml_config.h  openvml_config.h.in  openvml_const.h  openvml_driver.h  openvml_kernel.h  openvml_macros.h  openvml_map.h  openvml_reference.h
interface/: CMakeLists.txt  FIRSRGetSize.c  FIRSRInit_32f.c  FIRSR_32f.c  Makefile  acos.c  add.c  asin.c  atan.c  atan2.c  cmake_install.cmake  cos.c  exp.c  exp10.c  exp2.c  expm1.c  floor.c  fmax.c  fmin.c  ln.c  log10.c  log1p.c  log2.c  mean.c  pow.c  pow2o3.c  pow3o2.c  powx.c  sin.c  sinCos.c  sqr.c  sub.c  tan.c  tanh.c  variance.c
kernel/: CMakeLists.txt  Makefile  cmake_install.cmake
kernel/aarch64/: Kernel_generic.txt
kernel/arm/: Kernel_cortexa15.txt  Kernel_cortexa9.txt  Kernel_generic.txt  sexp_kernel_neon.c  sfloor_kernel_neon.c  simd_const.h  simd_exps_neon.h  simd_lns_neon.h  simd_map.h  simd_pows_neon.h  simd_tanhs_neon.h  sln_kernel_neon.c  spow_kernel_neon.c  stanh_kernel_neon.c
kernel/generic/: FIRSRGetSize_kernel.c  FIRSRInit_32f_kernel.c  FIRSR_32f_kernel.c  Kernel_generic.txt  acos_kernel.c  add_kernel.c  asin_kernel.c  atan2_kernel.c  atan_kernel.c  cos_kernel.c  exp10_kernel.c  exp2_kernel.c  exp_kernel.c  expm1_kernel.c  floor_kernel.c  fmax_kernel.c  fmin_kernel.c  ln_kernel.c  log10_kernel.c  log1p_kernel.c  log2_kernel.c  mean_kernel.c  pow_kernel.c  powx_kernel.c  sin_kernel.c  sincos_kernel.c  sqr_kernel.c  sub_kernel.c  tan_kernel.c  tanh_kernel.c  variance_kernel.c
kernel/x86_64/: Kernel_generic.txt  Kernel_haswell.txt  Kernel_sandybridge.txt  avx_mathfun.h  dadd_kernel_avx.c  dexp_kernel_avx.c  dln_kernel_avx.c  dlog10_kernel_avx.c  dlog1p_kernel_avx.c  dpow_kernel_avx.c  dpowx_kernel_avx.c  dsqr_kernel_avx.c  dsub_kernel_avx.c  dtanh_kernel_avx.c  sadd_kernel_avx.c  scos_kernel_avx.c  sexp_kernel_avx.c  sexp_kernel_avx2.c  simd_const.h  simd_coss_avx.h  simd_expd_avx.h  simd_exps_avx.h  simd_frexpd.h  simd_lnd_avx.h  simd_lns_avx.h  simd_map.h  simd_polevld.h  simd_powd_avx.h  simd_pows_avx.h  simd_sins_avx.h  simd_tanhd_avx.h  simd_tanhs_avx.h  sln_kernel_avx.c  slog10_kernel_avx.c  slog1p_kernel_avx.c  spow_kernel_avx.c  spowx_kernel_avx.c  ssin_kernel_avx.c  ssqr_kernel_avx.c  ssub_kernel_avx.c  (+1 more)
reference/: CMakeLists.txt  FIRSRGetSize.c  FIRSRInit_32f.c  FIRSR_32f.c  Makefile  cmake_install.cmake  vacos.c  vadd.c  vasin.c  vatan.c  vatan2.c  vcos.c  vexp.c  vexp10.c  vexp2.c  vexpm1.c  vfloor.c  vfmax.c  vfmin.c  vln.c  vlog10.c  vlog1p.c  vlog2.c  vmean.c  vpow.c  vpow2o3.c  vpow3o2.c  vpowx.c  vsin.c  vsincos.c  vsqr.c  vsub.c  vtan.c  vtanh.c  vvariance.c
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ctest.h  cycle.c  cycle.h  openvml_timer.c  openvml_timer.h  perf.txt  result.txt  test_FIRSR.c  test_acos.c  test_add.c  test_asin.c  test_atan.c  test_atan2.c  test_cos.c  test_exp.c  test_exp10.c  test_exp2.c  test_expm1.c  test_floor.c  test_fmax.c  test_fmin.c  test_ln.c  test_log10.c  test_log1p.c  test_log2.c  test_mean.c  test_pow.c  test_pow2o3.c  test_pow3o2.c  test_powx.c  test_sin.c  test_sincos.c  test_sqr.c  test_sub.c  test_tan.c  test_tanh.c  (+6 more)
